.provarCaches/00D410000011HE0EAM/objects/rstk__appsecurity__c.object
<CustomObject>
    <fields>
        <fullName>rstk__m_msa__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Master Services Agreement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_netchange__c</fullName>
        <label>Net Change</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryauthorization__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Authorization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryreqapproval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Req Approval</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryrequisitions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Requisitions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_objpagesetup__c</fullName>
        <label>Default Page Layout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_obshipStepGrid__c</fullName>
        <label>Obship Step Grid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_obship__c</fullName>
        <label>Outbound Shipment Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_obshipcont__c</fullName>
        <label>Outbound Shipment Container</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_odccodemaintenance__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ODC Code Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_openpobarcode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Open PO  Line /w Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ordernumberassign__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number Assign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_organizationaldepts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Organizational Depts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_packingslip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pedisadd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Disassembly Consumable Component</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pjprojwbs__c</fullName>
        <label>Project Charge Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pjstatus__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poagreement__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Agreement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poapcontrol__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO-AP Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poapmatch__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO-AP Match</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poapprovalmaint__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Approval Maint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poasn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Advance Shipment Notification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocommoditycode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Commodity Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocomponent__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Component</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poconctr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consolidation Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocontainerGrid__c</fullName>
        <label>Interim Containers with Reqs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocontainer__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Interim Shipment Container</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocontpiclist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Picklist for Consolidation Containers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocontprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container Cost &amp; Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pocontrolrecord__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poconttype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Container Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_podmdentry__c</fullName>
        <label>PO Demand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poentry__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Entry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pohvcont__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>High Value Container Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poissue__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poissuereversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Issue Reversal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poitemcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Item Cost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poitemcostcuravgcosttohist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Item Cost Cur Avg Cost to Hist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poitemmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Item Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poitemreceipts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order Receipts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_polinedetail__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Line Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poloader__c</fullName>
        <label>Poloader</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_porcptap__c</fullName>
        <label>PO Receipt Txn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poreceiptoperations__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Receipt Operations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poreceiptreversals__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Receipt Reversals</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poreceiptrouting__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Receipt Routing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Requisition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_porequisitiondemand__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Requisition Demand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poroute__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Route Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_portetype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Route Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poshipStepGrid__c</fullName>
        <label>Inbound Shipment And Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poship__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_poshipcont__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment Container</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_posubecomponent__c</fullName>
        <description>PO Line Components</description>
        <inlineHelpText>Subcontract PO Line Processing</inlineHelpText>
        <label>PO Line Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_pounno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UN Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_povclass__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_printtemplatemapping__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print Template Mapping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_processforecast__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process Forecast Upload</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_processlog__c</fullName>
        <label>ProcessLog</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_productgroupcode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Groups</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_productmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_projectbudgetcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Budget/Cost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_projectmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_projecttoprojectmove__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project to Project Transfer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_projectworkbench__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purchaseorderapproval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order Approval</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purchaseorderauthorization__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Authorization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purgeCostTransaction__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purge Cost Transactions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purgeSystemTransactions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purge System Transactions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purgepurchorders__c</fullName>
        <label>Purge Purchase Orders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purgesalesorders__c</fullName>
        <label>Purge Sales Orders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_purgeworkrrders__c</fullName>
        <label>Purge Work Orders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_qb_cost_txn_export__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quickbooks Cost Txn Export</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_qb_po_rcpt_export__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quickbooks PO Receipt Export</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_qb_txn_export_verify__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quickbooks Cost Txn Export Verify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_qbsoinvoiceexport__c</fullName>
        <label>Sales Invoice Export</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_qk_coa_import__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quickbooks Chart of Accts Import</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_qk_sales_invoice_export__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quickbooks Sales Invoice Export</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_recservices__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Recurring Services</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_requisitionworkbench__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_resetsimulatedtostandarddate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reset Simulated to Standard Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_routingmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Routing Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_routingoper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Routing Operations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_rtindoper__c</fullName>
        <label>Independent Operations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_rtwcgroup__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesContractDevDealMgmt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Contract Device Deal Management</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesContractDevTransfer__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Contract Device Transfer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salescommission__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Commission</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesordercontrol__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesorderinvoice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Invoice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesordertype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesorderworkbench__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Fulfillment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesperson__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Salesperson</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_salesregion__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_scrapreasoncodes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Reason Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_serialcomponenttracereport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Component Trace Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_serviceitemmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Items</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_setsimpurchpricefrompoderivedcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Set Sim Purch Price From PO Derived Cost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_setstandardcostsfromsimulated__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Set Standard Costs from Simulated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_shippingzone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipping Zones</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_shipviatypecodes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipping Methods</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_shopcalendar__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shop Calendar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sitemaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sitetositetransfer__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site to Site Transfer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_slcostedbomreport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>S/L Costed BOM Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soagh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Agreement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soamort__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Amort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soamortschedule__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Amort Batch for Sales and COGS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soapi__c</fullName>
        <label>SoApi</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soconpbbatch__c</fullName>
        <label>Recurring Bill Batch Review</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soconpbill__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Periodic Billing Review</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_socontract__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Contract Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_socreditrelease__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Credit Release</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soctt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Terms Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_socustgateway__c</fullName>
        <label>Customer Payment Gateway</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soentcal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Entitlement Calendar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soentry__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Entry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sofrtcalc__c</fullName>
        <label>Freight Calculations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sogateway__c</fullName>
        <label>Sales Order Payment Gateway</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soibatch__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Invoice Batch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soorddmd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Kit Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sopickh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Picklist Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soppy__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Prepayment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sopreselection__c</fullName>
        <description>Sales order workbench pre-selection</description>
        <inlineHelpText>Sales order workbench pre-selection</inlineHelpText>
        <label>SO Fulfillment Pre-Selection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sopricebook__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price Books</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soreasoncodes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reason Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sorma__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sormastat__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RMA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sormh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Returned Material (RMA)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_soship__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Shipper</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_souserstatus__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sowarr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipped Item Warranty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sowarrtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Warranty Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_stateprovince__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_stocklocationadd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Location Add</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_stocklocationimport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Location Import</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_stocklocationmove__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location to Location Transfer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_stocklocidmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Loc ID Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_stocklocnumber__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Loc Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_supitem__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Part Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_supitemchg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Part Change Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_supmtr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Material Transfer Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_supportPortal__c</fullName>
        <label>Rootstock Support Portal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_supreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Requisition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_syconfig__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sycountry__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Country Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sycustom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Custom Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sydata__c</fullName>
        <description>SYDATA Object</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sydata</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sydatad__c</fullName>
        <label>Sydatad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sydatat__c</fullName>
        <description>Not Applicable</description>
        <label>Sydatat</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sydefault__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_syprinter__c</fullName>
        <label>Print by Email Printer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_syqbcoa__c</fullName>
        <label>Chart of Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_sytariff__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tariff Code Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_syvatclass__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>VAT Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_syzip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SiteAddressZip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>